# wordwield

./: .env  .gitignore  JARVIS.code-workspace  LICENSE_DAPI_CC_BY_4.0.txt  LICENSE_WORDWIELD_2025.txt  Makefile  README.md  WORDWIELD.code-workspace  dapi.db  env_example  pyproject.toml  requirements.txt
projects/guessing_game/: guessing_game.db  main.py
projects/hello_ww/: main.py
projects/life/: life.db  main.py
projects/narrative/: __init__.py  main.py  narrative.db
wordwield/: __init__.py  app.py  controller.py  db.py
wordwield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
wordwield/_services/: _rag_service.py
wordwield/core/: __init__.py  db.py  device.py  encoder.py  fs.py  kaggle.py  norm.py  registry.py  ridge_retriever.py  semantic.py  semantic_query.py  sentence_decoder.py  vdb.py  vid.py  word_decoder.py  wordwield.py
wordwield/datasets/: __init__.py  bayes_reranker_dataset.py
wordwield/docs/: character_description.txt  character_prompts.txt  examples_2025_12.md  ideas.txt  patterns.md  plan_refaktoringa_semanticheskoi_adresacii.md  refactoring_plan_semantic_addressing.md  setup_2025_12.md  stupid_test.txt  style_requirements.txt  wordwield_2025_12.md  я.txt
wordwield/lib/: __init__.py  _code.py  _datum.py  _expert.py  _python.py  agent.py  autoargs.py  code.py  dapi.py  dapi_exception.py  debug.py  edge.py  execution_context.py  expert.py  jscpy.py  model.py  module.py  o.py  o_field.py  odb.py  operator.py  predicates.py  python.py  record.py  registry.py  string.py  sync.py  t.py  transform.py  vdb.py  wordwield.py  (+1 more)
(+155 files in other folders)
